--- a/day-notebook/input城市选择.html
+++ b/day-notebook/input城市选择.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>只读不写</title>
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<link rel="stylesheet" href="city/LArea.css">
 </head>
 <body>
 
@@ -20,6 +22,32 @@ onselectstart = "return false;"
 ime-mode:disabled;
 <!--5-->
 -webkit-touch-callout:none;
+
+
+<!--<span>全国</span>-->
+<input id="demo1" type="text" value="全国" readonly style="width: 44px;">
+<input id="value1" type="hidden" value="20,234,501"/>
+
+<script src="jquery-3.1.1.min.js"></script>
+<script src="city/LArea.js"></script>
+<script src="city/LAreaData2.js"></script>
+<script>
+	var area1 = new LArea();
+	console.log(provs_data);
+	area1.init({
+		'trigger': '#demo1', //触发选择控件的文本框，同时选择完毕后name属性输出到该位置
+		'valueTo': '#value1', //选择完毕后id属性输出到该位置
+		'keys': {
+			id: 'value',
+			name: 'text'
+		}, //绑定数据源相关字段 id对应valueTo的value属性输出 name对应trigger的value属性输出
+		'type': 2, //数据源类型
+		'data':  [provs_data, citys_data] //数据源
+	});
+	area1.value=[1,13];//控制初始位置，注意：该方法并不会影响到input的value
+
+</script>
+
 
 </body>
 </html>
